// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EvbExpansionPanel should create 1`] = `
Array [
  Object {
    "$attrs$": Object {
      "class": "title left",
      "onClick": [Function],
    },
    "$children$": null,
    "$elm$": undefined,
    "$flags$": 0,
    "$key$": undefined,
    "$name$": undefined,
    "$tag$": "div",
  },
  "",
]
`;

exports[`EvbExpansionPanel should render text 1`] = `
Array [
  Object {
    "$attrs$": Object {
      "class": "title left",
      "onClick": [Function],
    },
    "$children$": Array [
      Object {
        "$flags$": 0,
        "$text$": "Hello world",
      },
    ],
    "$elm$": undefined,
    "$flags$": 0,
    "$key$": undefined,
    "$name$": undefined,
    "$tag$": "div",
  },
  Object {
    "$attrs$": Object {
      "class": "body",
    },
    "$children$": Array [
      Object {
        "$attrs$": null,
        "$children$": null,
        "$elm$": undefined,
        "$flags$": 0,
        "$key$": undefined,
        "$name$": undefined,
        "$tag$": "slot",
      },
    ],
    "$elm$": undefined,
    "$flags$": 0,
    "$key$": undefined,
    "$name$": undefined,
    "$tag$": "div",
  },
]
`;
